2010-05-12  vadim  <vadim@vk.crocodile.org>

	* procurveaclAdvancedDialog.cpp (procurveaclAdvancedDialog::procurveaclAdvancedDialog):
	fixed #1449 options for ACL remarks and comments for ProCurve

	* PolicyCompiler_procurve_acl_writers.cpp (PolicyCompiler_procurve_acl::printAccessGroupCmd):
	generated commands that attach acl to a regular inetrface needed
	newline after "exit".

	* configlets/procurve/safety_net_acl: generating different
	commands in "Safety net" install mode depending on whether
	management interface is vlan or not.

2010-05-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* ObjectManipulatorTest.cpp (ObjectManipulatorTest::editSelectedObject):
	see #1447 fixed unit test for this change

	* ../src/res/configlets/dd-wrt-jffs/installer_commands_root:
	fixes #1448 "need to commit nvram changes on DD-WRT".

	* ObjectManipulator.cpp (ObjectManipulator::editSelectedObject):
	fixes #1447: context menu item "Edit" associated with rule set
	object in the tree opens it in the rule set view and the editor
	panel. Menu item "Open" only opens it in the rule set view. This
	eliminates strange behavior where it would open in the rule set
	view on first click on "Edit" and then in the editor in the second
	click on "Edit". Double click used to work the same, the first
	double click opened in rule set view, the second in the
	editor. Now double click always opens in rule set view and the
	editor which is more consistent with the behavior for other object
	types.

	* PolicyCompiler_procurve_acl_writers.cpp (PolicyCompiler_procurve_acl::printAccessGroupCmd):
	ProCurve uses different syntax for vlan ACLs and ACLs bound to
	switch ports. Enabled "advanced interface settings" dialog for
	ProCurve interfaces.

	* InterfaceDialog.cpp (InterfaceDialog::loadFWObject): button
	"Advanced interface settings" is controlled by element
	<supports_advanced_interface_options> in the host OS xml resource
	file. Before, it was controlled by the element