@@ -553,7 +553,10 @@ bool instDialog::checkSSHPathConfiguration(Firewall *fw)
 bool instDialog::isCiscoFamily()
 {
     string platform = cnf.fwobj->getStr("platform");
-    return (platform=="pix" || platform=="fwsm" || platform=="iosacl");
+    return (platform=="pix" ||
+            platform=="fwsm" ||
+            platform=="iosacl" ||
+            platform=="procurve_acl");
 }
 
 /*
