@@ -1,0 +1,22 @@
+## -*- mode: shell-script; -*- 
+##
+## Lines that start with "##" will be removed before this code is
+## added to the generated script.
+##
+## These are commands built-in policy installer runs on the firewall
+##
+##  Variables:
+##
+##  {{$rbtimeout}}  -- rollback timeout
+##  {{$test}}       -- doing installation in test mode
+##
+
+
+{{if cancel_rollback}}
+reload cancel
+{{endif}}
+
+{{if run}}
+wr mem
+{{endif}}
+
