@@ -1,0 +1,23 @@
+## -*- mode: shell-script; -*- 
+##
+## Lines that start with "##" will be removed before this code is
+## added to the generated script.
+##
+## These are commands built-in policy installer runs on the firewall
+##
+##  Variables:
+##
+##  {{$rbtimeout}}  -- rollback timeout (min)
+##  {{$rbtimeout_sec}}  -- rollback timeout (sec)
+##  {{$test}}       -- doing installation in test mode
+##
+
+terminal width 256
+terminal length 0
+
+{{if schedule_rollback}}
+reload in {{$rbtimeout}}
+{{endif}}
+
+
+
